# uroboros

./: .gitmodules  CMakeLists.txt  README.rst
cmake/: utilities.cmake
cmake/modules/: Findnaios_function2.cmake  Findpmed_fixed_size_function.cmake  Findskarupke_std_function.cmake
docs/: CMakeLists.txt  conf.py  index.rst
examples/: CMakeLists.txt
examples/batched_actions_enhancer/: CMakeLists.txt  main.cpp
examples/common/: batched_actions_enhancer.hpp  executor.hpp  task_manager.hpp
examples/counter/: CMakeLists.txt  main.cpp
examples/counter_qt/: CMakeLists.txt  main.cpp
examples/function_type_specialization/: CMakeLists.txt  main.cpp
examples/middleware_async/: CMakeLists.txt  main.cpp
examples/middleware_async_qt/: CMakeLists.txt  async_middleware.cpp  main.cpp  reducer.cpp  types.hpp  window.cpp  window.hpp
examples/middleware_basic/: CMakeLists.txt  main.cpp
examples/todos/: CMakeLists.txt  actions.hpp  main.cpp  reducer.cpp  state.hpp  types.hpp
examples/todos_qt/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
include/uroboros/: basic_store.hpp  middleware_enhancer.hpp  store.hpp
include/uroboros/detail/: scope_guard.hpp  store_enhancer.hpp
